fix style sheets for scrollbars

--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,13 @@ $theme_text: rgb(164, 164, 164);
 $mobile-breakpoint: 768px; // or the breakpoint you prefer
 * {
   // outline: 1px solid red;
-  overflow-x: hidden;
+  // overflow-x: hidden;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
 }
 body {
   margin: 0;
@@ -107,7 +113,8 @@ header {
     justify-content: right;
     flex-direction: row;
     padding-right: 2em;
-    height: 1em;
+    white-space: nowrap;
+    // height: 1em;
   }
   .navbar a {
     color: aliceblue;
